@@ -116,6 +116,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25745: Fixed leaking a userptr in curses panel destructor.
+
 - Issue #26881: The modulefinder module now supports extended opcode arguments.
 
 - Issue #23815: Fixed crashes related to directly created instances of types in
